--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,7 @@
               "src/styles.css"
             ],
             "scripts": [
+              "src/assets/scripts/pl/translations/pt-br.js"
             ]
           },
           "configurations": {
